# ai-artiste

./: .dockerignore  .env.prod.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  start.sh
.kiro/specs/artist-venue-matching/: design.md  requirements.md  tasks.md
conf/: deploy.ini  nginx.conf.template
scripts/: backup.sh
src/: INTEGRATION.md  __init__.py
src/api/: __init__.py  database.py  main.py
src/api/routes/: artists.py  calendar.py  health.py  search.py  venues.py
src/managers/: __init__.py  availability_manager.py  calendar_manager.py  match_engine.py  profile_manager.py  search_engine.py
src/models/: __init__.py  address.py  booking.py  compatibility.py  date_range.py  enums.py  event.py  profiles.py  result.py  technical.py
src/repositories/: README.md  __init__.py  artist_repository.py  booking_repository.py  database.py  models.py  venue_repository.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_availability_manager.py  test_availability_properties.py  test_calculate_compatibility_score.py  test_calendar_manager.py  test_match_engine.py  test_match_formatting.py  test_models_import.py  test_profile_manager.py  test_repositories.py  test_search_engine.py
